<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragments.auth.LoginFragment">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:id="@+id/LogoLogin"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtLogin"
        android:text="@string/iniciar_sesi_n"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        app:hintTextColor="#000"
        app:boxStrokeColor="#000"
        android:textColorHint="#000"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="40dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:id="@+id/UsuarioLogin"
            android:inputType="text"
            android:textSize="20sp"
            android:textColor="#000" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:hint="@string/contrase_a"
        app:boxStrokeColor="#000"
        android:textColorHint="#000"
        app:hintTextColor="#000"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="40dp" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:id="@+id/PasswordLogin"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="#000" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:id="@+id/btnLogin"
        android:text="@string/iniciar_sesi_n"
        android:textColor="#fff"
        android:backgroundTint="#000"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/LoginError"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_marginBottom="75dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/LoginToSignUp"
            android:text="@string/signup_link"
            android:textSize="18sp"
            android:textColor="#000" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Registrarse"
            android:text=" Registrarse"
            android:textSize="18sp"
            android:textColor="#0318e5"/>

    </LinearLayout>

</LinearLayout>